# Dynamic-routes

./: Makefile  pyproject.toml  routes.py
Dynamic_routes/: data.py
