[tool.poetry]
name = "dynamic-flask"
version = "0.1.0"
description = ""
authors = ["Alexander Shangin <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "dynamic_flask"}]

[tool.poetry.dependencies]
python = "^3.10"

Flask = "^2.3.2"
Faker = "^8.8.2"
Werkzeug = "2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
